--- a/nsbu.html
+++ b/nsbu.html
@@ -29,170 +29,142 @@
             <div id="tabpanel-1" role="tabpanel" aria-labelledby="tab-1">
               <div>
                 <h2>Skills</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Skill Name</th>
-                            <th>Die Value</th>
-                            <th>Roll Skill</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td id="stuntDie">Stunts</td>
-                            <td>
-                                <select aria-label="Stunt Die Value" name="stunt-die" id="stunt-die">
-                                    <option value="">--Set Stunt Die Value--</option>
-                                    <option value="4">d4</option>
-                                    <option value="6">d6</option>
-                                    <option value="8">d8</option>
-                                    <option value="10">d10</option>
-                                    <option value="12">d12</option>
-                                    <option value="20">d20</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input type="button" value="Roll Stunt" id="rollDie()" >
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Brawl</td>
-                            <td>
-                                <select aria-label="Brawl Die Value" name="brawl-die" id="brawl-die">
-                                    <option value="">--Set Brawl Die Value--</option>
-                                    <option value="4">d4</option>
-                                    <option value="6">d6</option>
-                                    <option value="8">d8</option>
-                                    <option value="10">d10</option>
-                                    <option value="12">d12</option>
-                                    <option value="20">d20</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input type="button" value="Roll Brawl" id="rollDie()" >
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Tough</td>
-                            <td>
-                                <select aria-label="Tough Die Value" name="tough-die" id="tough-die">
-                                    <option value="">--Set Tough Die Value--</option>
-                                    <option value="4">d4</option>
-                                    <option value="6">d6</option>
-                                    <option value="8">d8</option>
-                                    <option value="10">d10</option>
-                                    <option value="12">d12</option>
-                                    <option value="20">d20</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input type="button" value="Roll Tough" id="rollDie()" >
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Tech</td>
-                            <td>
-                                <select aria-label="Tech Die Value" name="tech-die" id="tech-die">
-                                    <option value="">--Set Tech Die Value--</option>
-                                    <option value="4">d4</option>
-                                    <option value="6">d6</option>
-                                    <option value="8">d8</option>
-                                    <option value="10">d10</option>
-                                    <option value="12">d12</option>
-                                    <option value="20">d20</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input type="button" value="Roll Tech" id="rollDie()" >
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Weapons</td>
-                            <td>
-                                <select aria-label="Weapons Die Value" name="weapons-die" id="weapons-die">
-                                    <option value="">--Set Weapons Die Value--</option>
-                                    <option value="4">d4</option>
-                                    <option value="6">d6</option>
-                                    <option value="8">d8</option>
-                                    <option value="10">d10</option>
-                                    <option value="12">d12</option>
-                                    <option value="20">d20</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input type="button" value="Roll Weapons" id="rollDie()" >
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Drive</td>
-                            <td>
-                                <select aria-label="Drive Die Value" name="drive-die" id="drive-die">
-                                    <option value="">--Set Drive Die Value--</option>
-                                    <option value="4">d4</option>
-                                    <option value="6">d6</option>
-                                    <option value="8">d8</option>
-                                    <option value="10">d10</option>
-                                    <option value="12">d12</option>
-                                    <option value="20">d20</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input type="button" value="Roll Drive" id="rollDie()" >
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Sneak</td>
-                            <td>
-                                <select aria-label="Sneak Die Value" name="sneak-die" id="sneak-die">
-                                    <option value="">--Set Sneak Die Value--</option>
-                                    <option value="4">d4</option>
-                                    <option value="6">d6</option>
-                                    <option value="8">d8</option>
-                                    <option value="10">d10</option>
-                                    <option value="12">d12</option>
-                                    <option value="20">d20</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input type="button" value="Roll Sneak" id="rollDie()" >
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Wits</td>
-                            <td>
-                                <select aria-label="Wits Die Value" name="wits-die" id="wits-die">
-                                    <option value="">--Set Wits Die Value--</option>
-                                    <option value="4">d4</option>
-                                    <option value="6">d6</option>
-                                    <option value="8">d8</option>
-                                    <option value="10">d10</option>
-                                    <option value="12">d12</option>
-                                    <option value="20">d20</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input type="button" value="Roll Wits" id="rollDie()" >
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Hot</td>
-                            <td>
-                                <select aria-label="Hot Die Value" name="hot-die" id="hot-die">
-                                    <option value="">--Set Hot Die Value--</option>
-                                    <option value="4">d4</option>
-                                    <option value="6">d6</option>
-                                    <option value="8">d8</option>
-                                    <option value="10">d10</option>
-                                    <option value="12">d12</option>
-                                    <option value="20">d20</option>
-                                </select>
-                            </td>
-                            <td>
-                                <input type="button" value="Roll Hot" id="rollDie()" >
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+
+                <h3>Stunts</h3>
+                <form>
+                    <select aria-label="Stunt Die Value" name="stuntDie" id="stunt-die">
+                        <option value="">--Set Stunt Die Value--</option>
+                        <option value="4">d4</option>
+                        <option value="6">d6</option>
+                        <option value="8">d8</option>
+                        <option value="10">d10</option>
+                        <option value="12">d12</option>
+                        <option value="20">d20</option>
+                        <option value="100">d100</option>
+                    </select>
+                    <input type="button" value="Roll Stunt" id="rollDie()" >
+                </form>
+
+                <h3>Brawl</h3>
+                <form>
+                    <select aria-label="Brawl Die Value" name="brawlDie" id="brawl-die">
+                        <option value="">--Set Brawl Die Value--</option>
+                        <option value="4">d4</option>
+                        <option value="6">d6</option>
+                        <option value="8">d8</option>
+                        <option value="10">d10</option>
+                        <option value="12">d12</option>
+                        <option value="20">d20</option>
+                        <option value="100">d100</option>
+                    </select>
+                    <input type="button" value="Roll Brawl" id="rollDie()" >
+                </form>
+
+                <h3>Tough</h3>
+                <form>
+                    <select aria-label="Tough Die Value" name="toughDie" id="tough-die">
+                        <option value="">--Set Tough Die Value--</option>
+                        <option value="4">d4</option>
+                        <option value="6">d6</option>
+                        <option value="8">d8</option>
+                        <option value="10">d10</option>
+                        <option value="12">d12</option>
+                        <option value="20">d20</option>
+                        <option value="100">d100</option>
+                    </select>
+                    <input type="button" value="Roll Tough" id="rollDie()" >
+                </form>
+                
+                <h3>Tech</h3>
+                <form>
+                    <select aria-label="Tech Die Value" name="tech-die" id="tech-die">
+                        <option value="">--Set Tech Die Value--</option>
+                        <option value="4">d4</option>
+                        <option value="6">d6</option>
+                        <option value="8">d8</option>
+                        <option value="10">d10</option>
+                        <option value="12">d12</option>
+                        <option value="20">d20</option>
+                        <option value="100">d100</option>
+                    </select>
+                    <input type="button" value="Roll Tech" id="rollDie()" >
+                </form>
+
+                <h3>Weapons</h3>
+                <form>
+                    <select aria-label="Weapons Die Value" name="weapons-die" id="weapons-die">
+                        <option value="">--Set Weapons Die Value--</option>
+                        <option value="4">d4</option>
+                        <option value="6">d6</option>
+                        <option value="8">d8</option>
+                        <option value="10">d10</option>
+                        <option value="12">d12</option>
+                        <option value="20">d20</option>
+                        <option value="100">d100</option>
+                    </select>
+                    <input type="button" value="Roll Weapons" id="rollDie()" >
+                </form>
+                
+                <h3>Drive</h3>
+                <form>
+                    <select aria-label="Drive Die Value" name="drive-die" id="drive-die">
+                        <option value="">--Set Drive Die Value--</option>
+                        <option value="4">d4</option>
+                        <option value="6">d6</option>
+                        <option value="8">d8</option>
+                        <option value="10">d10</option>
+                        <option value="12">d12</option>
+                        <option value="20">d20</option>
+                        <option value="100">d100</option>
+                    </select>
+                    <input type="button" value="Roll Drive" id="rollDie()" >
+                </form>
+
+                <h3>Sneak</h3>
+                <form>
+                    <select aria-label="Sneak Die Value" name="sneak-die" id="sneak-die">
+                        <option value="">--Set Sneak Die Value--</option>
+                        <option value="4">d4</option>
+                        <option value="6">d6</option>
+                        <option value="8">d8</option>
+                        <option value="10">d10</option>
+                        <option value="12">d12</option>
+                        <option value="20">d20</option>
+                        <option value="100">d100</option>
+                    </select>
+                    <input type="button" value="Roll Sneak" id="rollDie()" >
+                </form>
+
+                <h3>Wits</h3>
+                <form>
+                    <select aria-label="Wits Die Value" name="wits-die" id="wits-die">
+                        <option value="">--Set Wits Die Value--</option>
+                        <option value="4">d4</option>
+                        <option value="6">d6</option>
+                        <option value="8">d8</option>
+                        <option value="10">d10</option>
+                        <option value="12">d12</option>
+                        <option value="20">d20</option>
+                        <option value="100">d100</option>
+                    </select>
+                    <input type="button" value="Roll Wits" id="rollDie()" >
+                </form>
+
+                <h3>Hot</h3>
+                <form>
+                    <select aria-label="Hot Die Value" name="hot-die" id="hot-die">
+                        <option value="">--Set Hot Die Value--</option>
+                        <option value="4">d4</option>
+                        <option value="6">d6</option>
+                        <option value="8">d8</option>
+                        <option value="10">d10</option>
+                        <option value="12">d12</option>
+                        <option value="20">d20</option>
+                        <option value="100">d100</option>
+                    </select>
+                    <input type="button" value="Roll Hot" id="rollDie()" >
+                </form>
+
               </div>
             </div>
             <div id="tabpanel-2" role="tabpanel" aria-labelledby="tab-2" class="is-hidden">
