Renamed one of the css files. Started to prep to add some responsiveness to the information.

--- a/nsbu.html
+++ b/nsbu.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="styles/responsive.css">
     </head>
     <body>
         <!-- Tabs for skills and abilities -->
@@ -628,5 +629,7 @@
             <p>The NSBU system was written by Brennan Lee Mulligan & Carlos Luna. Design & Layout by Ruby Lavin. With special thanks to The Intrepid Heroes & Hunters Entertainment.</p>
         </footer>
         <script src="scripts/tabs.js"></script>
+        <script src="scripts/skills.js"></script>
+        <script src="scripts/abilities.js"></script>
     </body>
 </html>
