Updated some list formatting and table borders.

--- a/nsbu.html
+++ b/nsbu.html
@@ -184,7 +184,7 @@
                 <div>
                     <h2>Injuries</h2>
                     <p>The following options are used to set the number of various injury types your character has.</p>
-                    <ul>
+                    <ul id="injuries-List">
                         <li>
                             <label for="superficialInjury">Superficial:</label>
                             <select name="superficial-select" id="superficialInjury">
