Added some darkmode stylings.

--- a/nsbu.html
+++ b/nsbu.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/tablist.css">
-        <link rel="stylesheet" type="text/css" href="styles/darkmode.css">
+        <link rel="stylesheet" type="text/css" href="styles/light.css">
+        <!-- <link rel="stylesheet" type="text/css" href="styles/darkmode.css"> -->
         <link rel="stylesheet" type="text/css" href="styles/responsive.css">
     </head>
     <body>
@@ -33,6 +34,7 @@
             
             <div id="tabpanel-1" role="tabpanel" aria-labelledby="tab-1">
                 <h2>Skills</h2>
+                <p>When an Action Hero wants to do something totally sick, the GM tells them which of the 9 key skills to roll from.</p>
                 <div id="skillRollers">
                     <section id="stuntSection" class="skillSection">
                         <h3>Stunts</h3>
