--- a/nsbu.html
+++ b/nsbu.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/tablist.css">
-        <link rel="stylesheet" type="text/css" href="styles/light.css">
-        <!-- <link rel="stylesheet" type="text/css" href="styles/darkmode.css"> -->
+        <!-- <link rel="stylesheet" type="text/css" href="styles/light.css"> -->
+        <link rel="stylesheet" type="text/css" href="styles/dark.css">
         <link rel="stylesheet" type="text/css" href="styles/responsive.css">
     </head>
     <body>
