Added additional light and dark stylings for buttons.

--- a/nsbu.html
+++ b/nsbu.html
@@ -49,7 +49,7 @@
                                 <option value="20">d20</option>
                                 <option value="100">d100</option>
                             </select>
-                            <input type="button" value="Roll Stunts" id="rollStat()">
+                            <input type="button" value="Roll Stunts" class="rollStat">
                         </form>
                     </section>
                     <section id="brawlSection" class="skillSection">
@@ -65,7 +65,7 @@
                                 <option value="20">d20</option>
                                 <option value="100">d100</option>
                             </select>
-                            <input type="button" value="Roll Brawl" id="rollStat()">
+                            <input type="button" value="Roll Brawl" class="rollStat">
                         </form>
                     </section>
                     <section id="toughSection" class="skillSection">
@@ -81,7 +81,7 @@
                                 <option value="20">d20</option>
                                 <option value="100">d100</option>
                             </select>
-                            <input type="button" value="Roll Tough" id="rollStat()" >
+                            <input type="button" value="Roll Tough" class="rollStat" >
                         </form>
                     </section>
                     <section id="techSection" class="skillSection">
@@ -97,7 +97,7 @@
                                 <option value="20">d20</option>
                                 <option value="100">d100</option>
                             </select>
-                            <input type="button" value="Roll Tech" id="rollStat()" >
+                            <input type="button" value="Roll Tech" class="rollStat" >
                         </form>
                     </section>
                     <section id="weaponsSection" class="skillSection">
@@ -113,7 +113,7 @@
                                 <option value="20">d20</option>
                                 <option value="100">d100</option>
                             </select>
-                            <input type="button" value="Roll Weapons" id="rollStat()" >
+                            <input type="button" value="Roll Weapons" class="rollStat" >
                         </form>
                     </section>
                     <section id="driveSection" class="skillSection">
@@ -129,7 +129,7 @@
                                 <option value="20">d20</option>
                                 <option value="100">d100</option>
                             </select>
-                            <input type="button" value="Roll Drive" id="rollStat()" >
+                            <input type="button" value="Roll Drive" class="rollStat" >
                         </form>
                     </section>
                     <section id="sneakSection" class="skillSection">
@@ -145,7 +145,7 @@
                                 <option value="20">d20</option>
                                 <option value="100">d100</option>
                             </select>
-                            <input type="button" value="Roll Sneak" id="rollStat()" >
+                            <input type="button" value="Roll Sneak" class="rollStat" >
                         </form>
                     </section>
                     <section id="witsSection" class="skillSection">
@@ -161,7 +161,7 @@
                                 <option value="20">d20</option>
                                 <option value="100">d100</option>
                             </select>
-                            <input type="button" value="Roll Wits" id="rollStat()" >
+                            <input type="button" value="Roll Wits" class="rollStat" >
                         </form>
                     </section>
                     <section id="hotSection" class="skillSection">
@@ -177,7 +177,7 @@
                                 <option value="20">d20</option>
                                 <option value="100">d100</option>
                             </select>
-                            <input type="button" value="Roll Hot" id="rollStat()" >
+                            <input type="button" value="Roll Hot" class="rollStat" >
                         </form>
                     </section>
                 </div>
