Changed all colors in CSS to hex codes for consistency.

--- a/nsbu.html
+++ b/nsbu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
     <head>
         <title>NSBU Tracker</title>
         <meta charset="utf-8">
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/tablist.css">
         <!-- <link rel="stylesheet" type="text/css" href="styles/light.css"> -->
-        <link rel="stylesheet" type="text/css" href="styles/dark.css">
+        <!-- <link rel="stylesheet" type="text/css" href="styles/dark.css"> -->
         <link rel="stylesheet" type="text/css" href="styles/responsive.css">
     </head>
     <body>
@@ -705,7 +705,7 @@
                     <h3>Import Character Info</h3>
                     <p>Will have a file selection option and an Import button.</p>
                     <h3>Dark Mode</h3>
-                    <p>Placeholder Text</p>
+                    <button id="darkModeToggle" type="button" data-theme-toggle aria-label="Change to light theme">Change to light theme</button>
                 </div>
             </div>
         </main>
