Updated some formatting.

--- a/web interface/nsbu.html
+++ b/web interface/nsbu.html
@@ -15,8 +15,13 @@
         <!-- Tabs for skills and abilities -->
         <main>
             <h1>Never Stop Blowing Up (NSBU) Tracker</h1>
-        
-        
+
+            <h2>Basic Character Information</h2>
+            <ul>
+                <li><label for="heroName">Action Hero Name:</label><input type="text" id="heroName"></li>
+            <li><label for="heroCatchphrase">Catchphrase:</label><input type="text" id="heroCatchphrase"></li>
+            <li><label for="turboTokens">Turbo Tokens</label><input type="number" id="turboTokens" value="0" min="0" max="9999" step="1" aria-label="Turbo Tokens" title="Turbo Tokens"></li>
+            </ul>
             <div role="tablist" aria-labelledby="tablist-1" class="manual">
                 <button id="tab-1" type="button" role="tab" aria-selected="true" aria-controls="tabpanel-1">
                     <span class="focus">Skills</span>
