--- a/web interface/nsbu.html
+++ b/web interface/nsbu.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><label for="heroName">Action Hero Name:</label><input type="text" id="heroName"></li>
             <li><label for="heroCatchphrase">Catchphrase:</label><input type="text" id="heroCatchphrase"></li>
-            <li><label for="turboTokens">Turbo Tokens</label><input type="number" id="turboTokens" value="0" min="0" max="9999" step="1" aria-label="Turbo Tokens" title="Turbo Tokens"></li>
+            <li><label for="turboTokens">Turbo Tokens</label><input type="number" id="turboTokens" value="2" min="0" max="9999" step="1" aria-label="Turbo Tokens" title="Turbo Tokens"></li>
             </ul>
             <div role="tablist" aria-labelledby="tablist-1" class="manual">
                 <button id="tab-1" type="button" role="tab" aria-selected="true" aria-controls="tabpanel-1">
@@ -56,7 +56,7 @@
                             <option value="20">d20</option>
                             <option value="100">d100</option>
                         </select>
-                        <input type="button" id="stuntsButton1" value="Roll Stunts Here" class="rollStat" onclick="RollSkill(stuntsDie.value, stuntsResult.id)">
+                        <div class="rollDiv"><input type="button" id="stuntsButton1" value="Roll Stunts Here" class="rollStat" onclick="RollSkill(stuntsDie.value, stuntsResult.id)"></div>
                         <p role="status">Stunts Roll Result: <span id="stuntsResult">Not yet rolled</span></p>
                         <p>If you would like to roll in Roll 20 instead, copy the following text block:</p>
                         <div>
@@ -78,7 +78,7 @@
                             <option value="20">d20</option>
                             <option value="100">d100</option>
                         </select>
-                        <input type="button" id="brawlButton1" value="Roll Brawl Here" class="rollStat" onclick="RollSkill(brawlDie.value, brawlResult.id)">
+                        <div class="rollDiv"><input type="button" id="brawlButton1" value="Roll Brawl Here" class="rollStat" onclick="RollSkill(brawlDie.value, brawlResult.id)"></div>
                         <p role="status">Brawl Roll Result: <span id="brawlResult">Not yet rolled</span></p>
                         <p>If you would like to roll in Roll 20 instead, copy the following text block:</p>
                         <div>
@@ -100,7 +100,7 @@
                             <option value="20">d20</option>
                             <option value="100">d100</option>
                         </select>
-                        <input type="button" id="toughButton1" value="Roll Tough Here" class="rollStat" onclick="RollSkill(toughDie.value, toughResult.id)">
+                        <div class="rollDiv"><input type="button" id="toughButton1" value="Roll Tough Here" class="rollStat" onclick="RollSkill(toughDie.value, toughResult.id)"></div>
                         <p role="status">Tough Roll Result: <span id="toughResult">Not yet rolled</span></p>
                         <p>If you would like to roll in Roll 20 instead, copy the following text block:</p>
                         <div>
@@ -122,7 +122,7 @@
                             <option value="20">d20</option>
                             <option value="100">d100</option>
                         </select>
-                        <input type="button" id="techButton1" value="Roll Tech Here" class="rollStat" onclick="RollSkill(techDie.value, techResult.id)">
+                        <div class="rollDiv"><input type="button" id="techButton1" value="Roll Tech Here" class="rollStat" onclick="RollSkill(techDie.value, techResult.id)"></div>
                         <p role="status">Tech Roll Result: <span id="techResult">Not yet rolled</span></p>
                         <p>If you would like to roll in Roll 20 instead, copy the following text block:</p>
                         <div>
@@ -144,7 +144,7 @@
                             <option value="20">d20</option>
                             <option value="100">d100</option>
                         </select>
-                        <input type="button" id="weaponsButton1" value="Roll Weapons Here" class="rollStat" onclick="RollSkill(weaponsDie.value, weaponsResult.id)">
+                        <div class="rollDiv"><input type="button" id="weaponsButton1" value="Roll Weapons Here" class="rollStat" onclick="RollSkill(weaponsDie.value, weaponsResult.id)"></div>
                         <p role="status">Weapons Roll Result: <span id="weaponsResult">Not yet rolled</span></p>
                         <p>If you would like to roll in Roll 20 instead, copy the following text block:</p>
                         <div>
@@ -166,7 +166,7 @@
                             <option value="20">d20</option>
                             <option value="100">d100</option>
                         </select>
-                        <input type="button" id="driveButton1" value="Roll Drive Here" class="rollStat" onclick="RollSkill(driveDie.value, driveResult.id)">
+                        <div class="rollDiv"><input type="button" id="driveButton1" value="Roll Drive Here" class="rollStat" onclick="RollSkill(driveDie.value, driveResult.id)"></div>
                         <p role="status">Drive Roll Result: <span id="driveResult">Not yet rolled</span></p>
                         <p>If you would like to roll in Roll 20 instead, copy the following text block:</p>
                         <div>
@@ -188,7 +188,7 @@
                             <option value="20">d20</option>
                             <option value="100">d100</option>
                         </select>
-                        <input type="button" id="sneakButton1" value="Roll Sneak Here" class="rollStat" onclick="RollSkill(sneakDie.value, sneakResult.id)">
+                        <div class="rollDiv"><input type="button" id="sneakButton1" value="Roll Sneak Here" class="rollStat" onclick="RollSkill(sneakDie.value, sneakResult.id)"></div>
                         <p role="status">Sneak Roll Result: <span id="sneakResult">Not yet rolled</span></p>
                         <p>If you would like to roll in Roll 20 instead, copy the following text block:</p>
                         <div>
@@ -210,7 +210,7 @@
                             <option value="20">d20</option>
                             <option value="100">d100</option>
                         </select>
-                        <input type="button" id="witsButton1" value="Roll Wits Here" class="rollStat" onclick="RollSkill(witsDie.value, witsResult.id)">
+                        <div class="rollDiv"><input type="button" id="witsButton1" value="Roll Wits Here" class="rollStat" onclick="RollSkill(witsDie.value, witsResult.id)"></div>
                         <p role="status">Wits Roll Result: <span id="witsResult">Not yet rolled</span></p>
                         <p>If you would like to roll in Roll 20 instead, copy the following text block:</p>
                         <div>
@@ -232,7 +232,7 @@
                             <option value="20">d20</option>
                             <option value="100">d100</option>
                         </select>
-                        <input type="button" id="hotButton1" value="Roll Hot Here" class="rollStat" onclick="RollSkill(hotDie.value, hotResult.id)">
+                        <div class="rollDiv"><input type="button" id="hotButton1" value="Roll Hot Here" class="rollStat" onclick="RollSkill(hotDie.value, hotResult.id)"></div>
                         <p role="status">Hot Roll Result: <span id="hotResult">Not yet rolled</span></p>
                         <p>If you would like to roll in Roll 20 instead, copy the following text block:</p>
                         <div>
@@ -739,20 +739,19 @@
             <div id="tabpanel-5" role="tabpanel" aria-labelledby="tab-5" class="is-hidden">
                 <div>
                     <h2>Settings</h2>
+                    <p>This buttons on this page currently do not work. I will be implementing it in a later version.</p>
+
                     <h3>Export Character Info</h3>
-                    <p>This button currently does not work. I will be implementing it in a later version.</p>
                     <p>This button is used to export a character's information from this web app.</p>
-                    <input type="button" id="exportToggle" disabled type="button" aria-label="Export Character Information">
+                    <input type="button" id="exportToggle" disabled type="button" aria-label="Export Character Information" value="Export Character Information">
 
                     <h3>Import Character Info</h3>
-                    <p>This button currently does not work. I will be implementing it in a later version.</p>
                     <p>This button is used to import a character's information into this web app.</p>
-                    <input type="button" id="importToggle" disabled type="button" aria-label="Import Character Information">
+                    <input type="button" id="importToggle" disabled type="button" aria-label="Import Character Information" value="Import Character Information">
 
                     <h3>Dark Mode Toggle</h3>
-                    <p>This button currently does not work. I will be implementing it in a later version.</p>
                     <p>This button is intended to be used to toggle between light and dark mode.</p>
-                    <input type="button" id="darkModeToggle" disabled type="button" data-theme-toggle aria-label="Change to light Mode">
+                    <input type="button" id="darkModeToggle" disabled type="button" data-theme-toggle aria-label="Change to light Mode" value="Change to light Mode">
                 </div>
             </div>
         </main>
