--- a/web interface/nsbu.html
+++ b/web interface/nsbu.html
@@ -756,7 +756,7 @@
             </div>
         </main>
         <footer>
-        With special thanks to The Intrepid Heroes & Hunters Entertainment.</p>
+            <p>Written by Brennan Lee Mulligan & Carlos Luna.<br>Design & Layout by Ruby Lavin.<br>With special thanks to The Intrepid Heroes & Hunters Entertainment.</p>
         </footer>
         <script src="scripts/tabs.js"></script>
         <script src="scripts/skills.js"></script>
