--- a/web interface/nsbu.html
+++ b/web interface/nsbu.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/tablist.css">
-        <!-- <link rel="stylesheet" type="text/css" href="styles/light.css"> -->
-        <link rel="stylesheet" type="text/css" href="styles/dark.css">
+        <link rel="stylesheet" type="text/css" href="styles/light.css">
+        <!-- <link rel="stylesheet" type="text/css" href="styles/dark.css"> -->
         <!-- <link rel="stylesheet" type="text/css" href="styles/responsive.css"> -->
     </head>
     <body>
