--- a/browser-extension/chrome/nsbu.html
+++ b/browser-extension/chrome/nsbu.html
@@ -761,7 +761,7 @@
             <p>Written by Brennan Lee Mulligan & Carlos Luna.<br>Design & Layout by Ruby Lavin.<br>With special thanks to The Intrepid Heroes & Hunters Entertainment.</p>
         </footer>
         <script src="scripts/tabs.js"></script>
-        <script src="scripts/skills.js"></script>
-        <script src="scripts/abilities.js"></script>
+        <script src="scripts/nsbu.js"></script>
+        <!-- <script src="scripts/lightSwitch.js"></script> -->
     </body>
 </html>
